fix(gradle): del gradle root folder